tests/baselines/reference/metadataOfClassFromAlias(strict=true,target=es2015).errors.txt
auxiliary.ts(2,5): error TS2564: Property 'field' has no initializer and is not definitely assigned in the constructor.
testA.ts(6,19): error TS2564: Property 'aaa' has no initializer and is not definitely assigned in the constructor.
testB.ts(6,19): error TS2564: Property 'bbb' has no initializer and is not definitely assigned in the constructor.


==== auxiliary.ts (1 errors) ====
    export class SomeClass {
        field: string;
        ~~~~~
!!! error TS2564: Property 'field' has no initializer and is not definitely assigned in the constructor.
    }
    
==== testA.ts (1 errors) ====
    import { SomeClass } from './auxiliary';
    function annotation(): PropertyDecorator {
        return (target: any): void => { };
    }
    export class ClassA {
        @annotation() aaa: SomeClass;
                      ~~~
!!! error TS2564: Property 'aaa' has no initializer and is not definitely assigned in the constructor.
    }
    
==== testB.ts (1 errors) ====
    import { SomeClass } from './auxiliary';
    function annotation(): PropertyDecorator {
        return (target: any): void => { };
    }
    export class ClassB {
        @annotation() bbb: SomeClass | null;
                      ~~~
!!! error TS2564: Property 'bbb' has no initializer and is not definitely assigned in the constructor.
    }